Add GUID to the projects

--- a/src/CodeDesignPlus.Core/CodeDesignPlus.Core.csproj
+++ b/src/CodeDesignPlus.Core/CodeDesignPlus.Core.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <ProjectGuid>5A422C4A-80EE-4309-835B-856C862A989E</ProjectGuid>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
