--- a/tests/CodeDesignPlus.Core.Test/CodeDesignPlus.Core.Test.csproj
+++ b/tests/CodeDesignPlus.Core.Test/CodeDesignPlus.Core.Test.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <ProjectGuid>1DFD01D2-C828-4F7D-8807-4BB232B08DD8</ProjectGuid>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
